Add oauth2 authroization

--- a/app/alembic.ini
+++ b/app/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://root:123456@host.docker.internal/my_project_db
+sqlalchemy.url = mysql://root:123456@host.docker.internal/school_system_db
 
 # Logging configuration
 [loggers]
