--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Django>=2.1.3, <2.2.0
 djangorestframework>=3.9.0, <3.10.0
 djangorestframework-jwt==1.11.0
 django-rest-witchcraft
-mysqlclient==1.3.12
 pytz==2018.3
 alembic
 python-dateutil
+django-oauth-toolkit
+django-cors-middleware
